--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ lsi: false
 highlighter: rouge
 markdown: kramdown
 kramdown:
-  input: GFM
+  #  input: GFM
   auto_ids: true
   syntax_highlighter: rouge
 
